widened line spacing and fixed tumblr styles

--- a/public/stylesheets/clark.css
+++ b/public/stylesheets/clark.css
@@ -63,7 +63,7 @@ h2{
 	margin:24px 0 5px 0;
 }
 p{
-	line-height:140%;
+	line-height:150%;
 	margin:0 0 12px 0;
 }
 b{
@@ -329,7 +329,7 @@ p.lead{
 }
 p.motivation{
 	font-size:18px;
-	line-height:140%;
+	line-height:150%;
 }
 .eventtitle{
 	font-size:16px;
